修改同一个过滤器调用两次bug和不能过滤指定地址